@@ -1,5 +1,12 @@
 2008-11-07  Sergey Poznyakoff  <gray@gnu.org.ua>
 
+	Bugfix
+	
+	* mailbox/amd.c (_amd_message_save): Make sure message files have
+	right permissions.
+	(amd_message_stream_open): Remove useless flags addition.
+	Permissions are taken care of in _amd_message_save.
+	
 	Allow to set mailbox permissions using fileinto Sieve action.
 	
 	* mailbox/permstr.c: New file.
